# softcore-asm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
examples/: softcore.rs  test_cfg.rs  test_expansion.rs  test_memory.rs  test_mixed_syntax.rs  test_multi_csr.rs  test_operands.rs  test_rasm.rs  test_validation.rs
macro/: Cargo.toml  README.md
macro/src/: arch.rs  asm_parser.pest  asm_parser.rs  lib.rs  macro_parser.rs  relooper.rs  riscv.rs
src/: asm_parser.pest  asm_parser.rs  callable.rs  display.rs  lib.rs  macro_parser.rs  parser.rs  relooper.rs  riscv.rs
temporary_disabled_tests/: test.rs
tests/: soteria.rs  test.rs  tock.rs  trap.rs
