[package]
name = "rasm"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
softcore-rv64 = "0.4.0"

[[example]]
name = "test_rasm"
path = "examples/test_rasm.rs"

[[example]]
name = "test_operands"
path = "examples/test_operands.rs"

[[example]]
name = "test_validation"
path = "examples/test_validation.rs"

[[example]]
name = "test_expansion"
path = "examples/test_expansion.rs"

[[example]]
name = "test_cfg"
path = "examples/test_cfg.rs"

[[example]]
name = "softcore"
path = "examples/softcore.rs"

[[example]]
name = "test_mixed_syntax"
path = "examples/test_mixed_syntax.rs"

[[example]]
name = "test_multi_csr"
path = "examples/test_multi_csr.rs"

[[example]]
name = "test_memory"
path = "examples/test_memory.rs"
