[package]
name = "softcore-asm-rv64"
version = "0.2.0"
edition = "2024"
authors = ["Charly Castes"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/CharlyCst/softcore-rs"
description = "A macro to facilitate the use of softcore-rv64"
keywords = ["riscv", "specification", "emulator"]
categories = ["emulators", "development-tools::testing"]
readme = "README.md"

[lib]

[dependencies]
softcore-rv64 = { workspace = true }
softcore-asm-macro = { path = "macro/", version = "0.2.0" }

[workspace]
members = [ "macro" ]

# Packages published to crates.io
default-members = [
    ".",
    "macro"
]

[workspace.dependencies]
softcore-rv64 = "0.6.0"
